--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <version>1.0-SNAPSHOT</version>
 
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>${project.artifactId}</name>
 
@@ -22,10 +22,13 @@
     <url>http://karlbennett.github.io/${project.artifactId}/</url>
 
     <properties>
-        <jackson.version>2.4.1</jackson.version>
+        <jackson.version>[2.4.1]</jackson.version>
+        <spring.version>[4.0.6.RELEASE]</spring.version>
     </properties>
 
     <build>
+        <finalName>files</finalName>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -55,15 +58,70 @@
                 <groupId>com.github.github</groupId>
                 <artifactId>site-maven-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <!-- We are using version 2.1 of the tomcat plugin because 2.2 has a bug that causes the executable JAR -->
+                <!-- to fail to start up. -->
+                <version>2.1</version>
+                <configuration>
+                    <path>/${project.build.finalName}</path>
+                    <!-- This directory configuration is required to tell the tomcat plugin where the WAR files are. -->
+                    <!-- Otherwise it expects a ${basedir}/src/main/webapp directory to exist. -->
+                    <warSourceDirectory>${basedir}/src/main</warSourceDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>tomcat-exec-war</id>
+                        <goals>
+                            <goal>exec-war</goal>
+                        </goals>
+                        <phase>package</phase>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <!-- Tell the Maven WAR plugin to ignore the fact that we no longer have a web.xml file. -->
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
     <dependencies>
+        <!-- Spring MVC for easy request mapping. -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <!-- Code generation library that is required for Spring Java configuration. -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>[3.1]</version>
+        </dependency>
+
+        <!-- JEE API so that the servlet interfaces can be accessed. -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>[3.1.0]</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- The Apache Commons IO API helps simplify file and directory access. -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
+            <version>[1.3.2]</version>
         </dependency>
 
         <!-- Jackson JSON object mapping library for converting request and response data. -->
@@ -76,6 +134,13 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+
+        <!-- Log4j added to silence the libraries. -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>[1.2.17]</version>
         </dependency>
 
         <!-- Test dependencies. -->
@@ -91,11 +156,20 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
         </dependency>
+
         <!-- Using Joda Time in the tests only to be able to verify the dates are correct with different code. -->
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
-            <version>2.3</version>
+            <version>[2.3]</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Spring test classes that simplify the loading of the Spring context in for JUnit tests. -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
