--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,18 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>shiver.me.timbers.file.*</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>com.github.github</groupId>
@@ -75,7 +87,7 @@
                     <execution>
                         <id>tomcat-exec-war</id>
                         <goals>
-                            <goal>exec-war</goal>
+                            <goal>exec-war-only</goal>
                         </goals>
                         <phase>package</phase>
                     </execution>
@@ -175,6 +187,6 @@
     </dependencies>
 
     <scm>
-        <developerConnection>scm:git:git@github.com:karlbennett/${project.artifactId}.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:shiver-me-timbers/${project.artifactId}.git</developerConnection>
     </scm>
 </project>
