Put all the absolute paths into the test.properties file to greatly reduce the test codes complexity.

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,1 +1,17 @@
 testDir=${project.build.testOutputDirectory}
+
+absolutePath.dirone=${project.build.testOutputDirectory}/dirone
+absolutePath.dirtwo=${project.build.testOutputDirectory}/dirone/dirtwo
+absolutePath.dirthree=${project.build.testOutputDirectory}/dirthree
+absolutePath.dirfour=${project.build.testOutputDirectory}/dirthree/.dirfour
+absolutePath.shiver=${project.build.testOutputDirectory}/shiver
+
+absolutePath.testProperties=${project.build.testOutputDirectory}/test.properties
+absolutePath.fileOne=${project.build.testOutputDirectory}/FileOne.txt
+absolutePath.fileTwo=${project.build.testOutputDirectory}/dirone/.FileTwo
+absolutePath.fileThree=${project.build.testOutputDirectory}/dirone/dirtwo/.FileThree.txt
+absolutePath.fileFour=${project.build.testOutputDirectory}/dirthree/.dirfour/FileFour.txt
+absolutePath.fileFive=${project.build.testOutputDirectory}/FileFive.json
+absolutePath.fileSix=${project.build.testOutputDirectory}/FileSix.xml
+absolutePath.fileSeven=${project.build.testOutputDirectory}/FileSeven.png
+absolutePath.fileEight=${project.build.testOutputDirectory}/FileEight.mp4
