--- a/pom.xml
+++ b/pom.xml
@@ -139,9 +139,9 @@
 
         <!-- The Apache Commons IO API helps simplify file and directory access. -->
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>[1.3.2]</version>
+            <version>2.4</version>
         </dependency>
 
         <!-- Jackson JSON object mapping library for converting request and response data. -->
