Added a log4j.xml file for the tests to suppress all but fatal messages.

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -6,6 +6,7 @@ absolutePath.dirthree=${project.build.testOutputDirectory}/dirthree
 absolutePath.dirfour=${project.build.testOutputDirectory}/dirthree/.dirfour
 absolutePath.shiver=${project.build.testOutputDirectory}/shiver
 
+absolutePath.log4j=${project.build.testOutputDirectory}/log4j.xml
 absolutePath.testProperties=${project.build.testOutputDirectory}/test.properties
 absolutePath.fileOne=${project.build.testOutputDirectory}/FileOne.txt
 absolutePath.fileTwo=${project.build.testOutputDirectory}/dirone/.FileTwo
