Added unit tests for the DefaultAwareExceptionHandlerExceptionResolver.

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,9 @@
                         <configuration>
                             <includes>
                                 <include>shiver.me.timbers.file.*</include>
+                                <include>
+                                    org.springframework.web.servlet.mvc.method.annotation.DefaultAwareExceptionHandlerExceptionResolver
+                                </include>
                             </includes>
                         </configuration>
                     </execution>
