--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -4,6 +4,7 @@ absolutePath.dirone=${project.build.testOutputDirectory}/dirone
 absolutePath.dirtwo=${project.build.testOutputDirectory}/dirone/dirtwo
 absolutePath.dirthree=${project.build.testOutputDirectory}/dirthree
 absolutePath.dirfour=${project.build.testOutputDirectory}/dirthree/.dirfour
+absolutePath.org=${project.build.testOutputDirectory}/org
 absolutePath.shiver=${project.build.testOutputDirectory}/shiver
 
 absolutePath.log4j=${project.build.testOutputDirectory}/log4j.xml
